[package]
name = "forgeflow"
version = "0.1.0"
edition = "2024"
description = "Terminal-first Git Forge workflow automation"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/nashzhou/forgeflow"
keywords = ["git", "forge", "cli", "automation", "workflow"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[lib]
name = "vkt"
path = "src/lib.rs"

[[bin]]
name = "vkt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
urlencoding = "2.1"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
